--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotoalbum</title>
+    <title>keyan Fotoalbum</title>
     <link rel="stylesheet" href="styles.css">
+	<script src="script.js"></script>
 </head>
 <body>
 
@@ -60,15 +61,16 @@
         <img class="modal-content" id="modalImage">
     </div>
 
-    <script src="script.js"></script>
+
 <h3>Ihr denkt ich bin gay? Richtig!</h3>
 <p>Hier ist ein Video wo ich Spaß mit Timmy habe!</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/4rPWAhFwrJ4?si=JJkds23FAnJDkEvc"
 title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
  allowfullscreen></iframe>
- <p><h3>Ihr wollt noch mehr von mir, dem schwulen GristlyMarmot sehen? Dann abonier mich auf YT: <a href="https://www.youtube.com/@gristlymarmot">GRISTLYMARMOT</a><p>Ich goone auch gerne im Stream wenn ich Roblox spiele, also folgt mir auhc auf Roblox: My roblox username: koley1236 :]
+ <p><h3>Ihr wollt noch mehr von mir, dem schwulen GristlyMarmot sehen? Dann abonier mich auf YT: <a href="https://www.youtube.com/@gristlymarmot" class="keyangoonknopf">GRISTLYMARMOT</a><p>Ich goone auch gerne im Stream wenn ich Roblox spiele, also folgt mir auhc auf Roblox: My roblox username: koley1236 :]
 </h3>
 </body>
 </html>
+
 
