--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class="photo" onclick="openModal('https://yt3.googleusercontent.com/HNYlywJ_X8888fplg0lOdj3vi2Ojaafc117U-3RVYRECU5Inkmf2MaUW-Etmdz4_fgFzxFzt=s160-c-k-c0x00ffffff-no-rj')">
             <img src="https://yt3.googleusercontent.com/HNYlywJ_X8888fplg0lOdj3vi2Ojaafc117U-3RVYRECU5Inkmf2MaUW-Etmdz4_fgFzxFzt=s160-c-k-c0x00ffffff-no-rj" alt="Foto 3">
         </div>
-		<div class="photo" onclick="openModal('https://th.bing.com/th/id/OIP.vz0DnLHLrxBKUQ5xmp9uggHaHa?w=163&h=180&c=7&r=0&o=7&pid=1.7&rm=3')">
-            <img src="https://th.bing.com/th/id/OIP.vz0DnLHLrxBKUQ5xmp9uggHaHa?w=163&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="Foto 2">
+		<div class="photo" onclick="openModal('keyan2')">
+            <img src="keyan2" alt="Foto 2">
         </div>
 		
 	
@@ -73,5 +73,6 @@ title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; cli
 </h3>
 </body>
 </html>
+
 
 
