--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class="photo" onclick="openModal('https://yt3.googleusercontent.com/HNYlywJ_X8888fplg0lOdj3vi2Ojaafc117U-3RVYRECU5Inkmf2MaUW-Etmdz4_fgFzxFzt=s160-c-k-c0x00ffffff-no-rj')">
             <img src="https://yt3.googleusercontent.com/HNYlywJ_X8888fplg0lOdj3vi2Ojaafc117U-3RVYRECU5Inkmf2MaUW-Etmdz4_fgFzxFzt=s160-c-k-c0x00ffffff-no-rj" alt="Foto 3">
         </div>
-		<div class="photo" onclick="openModal('keyan2.jpg')">
-            <img src="keyan2.jpg" alt="Foto 2">
+		<div class="photo" onclick="openModal('keyan2.JPG')">
+            <img src="keyan2.JPG" alt="Foto 2">
         </div>
 		
 	
@@ -73,6 +73,7 @@ title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; cli
 </h3>
 </body>
 </html>
+
 
 
 
