--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="gallery">
         <div class="photo" onclick="openModal('Keyan.png')">
-            <img src="Keyan.png" alt="Foto 1">
+            <img src="Keyan.PNG>" alt="Foto 1">
         </div>
         <div class="photo" onclick="openModal('https://th.bing.com/th/id/OIP.vz0DnLHLrxBKUQ5xmp9uggHaHa?w=163&h=180&c=7&r=0&o=7&pid=1.7&rm=3')">
             <img src="https://th.bing.com/th/id/OIP.vz0DnLHLrxBKUQ5xmp9uggHaHa?w=163&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="Foto 2">
@@ -73,6 +73,7 @@ title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; cli
 </h3>
 </body>
 </html>
+
 
 
 
