--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--https://htmlpreview.github.io/?https://github.com/yztz8/keyansite123timmy/blob/0d7f4f0b9dd5bacb72503927f6afff193c40b8a4/index.html-->
-<html lang="de"> ##justus gyat
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,6 +73,7 @@ title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; cli
 </h3>
 </body>
 </html>
+
 
 
 
