Fix HTML structure and add missing elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--https://htmlpreview.github.io/?https://github.com/yztz8/TimmyJulesXyztz8/blob/main/start.html-->
+<!--https://htmlpreview.github.io/?https://github.com/yztz8/TimmyJulesXyztz8/blob/main/index.html-->
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -28,6 +29,7 @@
 		<div class="photo" onclick="openModal('keyan2.JPG')">
             <img src="keyan2.JPG" alt="Foto 2">
 
+	<p id="text">glaubst du dass ioch massiv schwul bin?</p>
     <button id="btn" onclick="wechseln()">
         Klick mich um es heraus zu finden
     </button>
@@ -97,6 +99,7 @@ title="Ich goone auf Timmy!" frameborder="0" allow="accelerometer; autoplay; cli
 </h3>
 </body>
 </html>
+
 
 
 
